<resources>
    <string name="app_name">Stulish</string>
    <string name="study">Study</string>
    <string name="learn">Learn</string>
    <string name="story">Story</string>
    <string name="personal_information">personal information</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="DrawerLayout_open">Open</string>
    <string name="DrawerLayout_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="press_back_again">press back again to exit</string>
    <string name="login">Login</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_question">Enter your question</string>
    <string name="password_wrong">The password you entered is incorrect</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register_a_new_account">Register a new account</string>
    <string name="register">Register</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration_failed">Registration failed please check your username</string>
    <string name="back_login">Back login</string>
    <string name="back">Back</string>
    <string name="change">Change</string>
    <string name="hint_errorr_edittext">Please enter information</string>
    <string name="errorr_edittext_pass_confirm">Please check your password again</string>
    <string name="title_progess">Loading</string>
    <string name="content_progess">Please wait a moment...</string>
    <string name="do_you_remember">Do you want to remember this login?</string>
    <string name="notification">Notification</string>
    <string name="login_failed_information_you_entered">Login failed, Please check the information you entered</string>
    <string name="try_again">Try again</string>
    <string name="are_you_sure">Are you sure you want to sign out of your account?</string>
    <string name="cancel">Cancel</string>
    <string name="remember_login">Remember login</string>
    <string name="remember">Remember</string>
    <string name="no_thanks">No, thanks</string>
    <string name="update_avatar_success">Update profile photo successfully</string>
    <string name="update_avatar_errorr">Update failed</string>
    <string name="update_information">Update information</string>
    <string name="errorr_pass_changed">Your username has failed, please login again</string>
    <string name="learn_now">Learn Now</string>
    <string name="next">Next</string>
    <string name="title_of_notification">Hey buddy</string>
    <string name="no_network">No network please check your connection again</string>
    <string name="understood">Understood</string>
    <string name="retry">Retry</string>
    <string name="good">You are very good</string>
    <string name="wrong">You were wrong</string>
    <string name="exit_learn">Are you sure you want to exit this lesson</string>
    <string name="exit_create_test">Are you sure you want to delete this test</string>
    <string name="exit">Exit</string>
    <string name="insert_errorr">Insert data failed please re-enter valid information</string>
    <string name="listen_and_choose">Listen and choose</string>
    <string name="look_and_translate">Look and translate</string>
    <string name="listen_and_read">Listen and read</string>
    <string name="complete">Complete</string>
    <string name="right_answer">Right answer</string>
    <string name="let_s_study">Let\'s study</string>
    <string name="you_got">You got:</string>
    <string name="channel_name">this is channel</string>
    <string name="channel_description">This is channel description</string>
    <string name="touch_to_speak">Touch to speak</string>
    <string name="listening">Listening...</string>
    <string name="you_perfecte">You got a perfect score</string>
    <string name="great_you">Great you have achieved: </string>
    <string name="Just_a_little">Just a little more effort and you have achieved: </string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="translate_into_english">Translate into English</string>
    <string name="choose_the_best_answer">Choose the best answer</string>
    <string name="choose_answer_true">Choose the answer true</string>
    <string name="question">Question: </string>
    <string name="edit_personal_information">Edit personal information</string>
    <string name="create_the_test">Create the new test</string>
    <string name="change_password">Change Password</string>
    <string name="create">Create</string>
    <string name="search_here">Search here</string>
    <string name="search">Search</string>
    <string name="the_test">The Test</string>
    <string name="id_of_the_test">"ID of the test: "</string>
    <string name="id_of_maker">"ID of maker: "</string>
    <string name="name_of_the_test">"Name of the test: "</string>
    <string name="date_created">"Date created: "</string>
    <string name="Couldnt_you_need">"Couldn't find the results you were looking for"</string>
    <string name="create_now">Create now</string>
    <string name="enter_id_of_the_test">Enter ID of the test</string>
    <string name="enter_title_of_the_test">Enter title of the test</string>
    <string name="min_number">Minimum value is 10</string>
    <string name="enter_number_of_questions_of_the_test">Enter number of questions of the test</string>
    <string name="create_the_questions">Create the questions</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="please_choose_the_correct_answer">Please choose the correct answer</string>
    <string name="you_are_in_first_place">You are in first place</string>
    <string name="added_error_data_please_try_again">Added error data please try again</string>
    <string name="you_have_completed_your_test">You have completed your test</string>
    <string name="total_number_of_questions_for_the_test">Total number of questions for the test: </string>
    <string name="the_number_of_questions_you_have_chosen_is_wrong">The number of questions you have chosen is wrong: </string>
    <string name="language">Language</string>
</resources>