<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/change_password"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:paddingVertical="10dp"
        android:background="@color/orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/dcp_password"
        android:hint="@string/enter_your_password"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:layout_marginVertical="20dp"
        android:textColor="@color/black"
        android:background="@drawable/transparent_corner_17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/dcp_newpassword"
        android:hint="@string/enter_your_new_password"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:background="@drawable/transparent_corner_17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/dcp_confirm"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:background="@drawable/transparent_corner_17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dcp_btnback"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textAllCaps="false"
            android:layout_marginHorizontal="15dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingVertical="10dp"
            app:cornerRadius="20dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/gray" />

        <Button
            android:id="@+id/dcp_btnchange"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:layout_marginHorizontal="15dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingVertical="10dp"
            app:cornerRadius="20dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange" />

    </LinearLayout>

</LinearLayout>