<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginHorizontal="20dp"
    tools:context=".fragments.EditProfileFragment">

    <TextView
        android:text="@string/edit_personal_information"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_marginVertical="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:src="@drawable/day_chain"
        android:id="@+id/fep_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="30dp"
        app:civ_border_color="@color/darkblue"
        app:civ_border_width="5dp" />

    <EditText
        android:id="@+id/fep_username"
        android:enabled="false"
        android:hint="@string/enter_your_username"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/black"
        android:background="@drawable/transparent_corner_17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/fep_name"
        android:hint="@string/enter_your_name"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/black"
        android:background="@drawable/transparent_corner_17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/fep_password"
        android:enabled="false"
        android:hint="@string/enter_your_password"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:background="@drawable/transparent_corner_17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/fep_changepass"
        android:text="@string/change_password"
        android:textColor="@color/darkblue"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="right"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/fap_btnedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_information"
        android:layout_marginBottom="50dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="24sp"
        android:paddingVertical="10dp"
        app:cornerRadius="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange" />

</LinearLayout>