<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".activities.CompleteTheTestOfUserActivity">

    <TextView
        android:layout_weight="1"
        android:text="@string/you_have_completed_your_test"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:textColor="@color/green"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <RelativeLayout
        android:layout_weight="2"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/acttou_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_above="@+id/acttou_layout_text"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/day_chain"
            app:civ_border_color="@color/darkblue"
            app:civ_border_width="5dp" />

        <LinearLayout
            android:id="@+id/acttou_layout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/acttou_lbid"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/id_of_the_test"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/acttou_lbuser"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/id_of_maker"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/acttou_lbname"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name_of_the_test"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/acttou_lbdate"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_created"
                android:textColor="@color/black"
                android:textSize="14sp"/>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_weight="2"
        android:paddingBottom="15dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/acttou_lbtotal"
            android:text="@string/total_number_of_questions_for_the_test"
            android:textSize="15sp"
            android:layout_marginHorizontal="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/acttou_lbwrong"
            android:text="@string/the_number_of_questions_you_have_chosen_is_wrong"
            android:textSize="15sp"
            android:layout_marginHorizontal="10dp"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/acttou_btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/let_s_study"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingVertical="5dp"
            app:cornerRadius="20dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/green" />
    </LinearLayout>
</LinearLayout>