<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/notification"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:paddingVertical="10dp"
        android:background="@color/orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/do_you_remember"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dcr_remember"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/remember"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:backgroundTint="@color/green"
            app:cornerRadius="25dp"
            android:paddingVertical="10dp" />

        <Button
            android:id="@+id/dcr_no"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/no_thanks"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:backgroundTint="@color/gray"
            app:cornerRadius="25dp"
            android:paddingVertical="10dp" />

    </LinearLayout>
</LinearLayout>